--- a/DAVE3625-Oblig2.ipynb
+++ b/DAVE3625-Oblig2.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "### Algorithm Choice\n",
     "\n",
+    "We chose **Linear Regression** for this problem because we want to predict the **stock price**, which is a **continuous number** and not a **category**.  \n",
+    "Linear regression is simple, easy to interpret, and works well for this kind of problem.  \n",
+    "The model finds a relationship between the **date** and the **stock price**, and it is both **quick** and **reliable**."
    ]
   },
   {
