--- a/DAVE3625-Oblig2.ipynb
+++ b/DAVE3625-Oblig2.ipynb
@@ -14,14 +14,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c4b78e62",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open_price</th>\n",
+       "      <th>high_price</th>\n",
+       "      <th>low_price</th>\n",
+       "      <th>close_price</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>adjclose_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-28</td>\n",
+       "      <td>265.000000</td>\n",
+       "      <td>483.000000</td>\n",
+       "      <td>112.250000</td>\n",
+       "      <td>193.600006</td>\n",
+       "      <td>58815800.0</td>\n",
+       "      <td>193.600006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-27</td>\n",
+       "      <td>354.829987</td>\n",
+       "      <td>380.000000</td>\n",
+       "      <td>249.000000</td>\n",
+       "      <td>347.510010</td>\n",
+       "      <td>93396700.0</td>\n",
+       "      <td>347.510010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-26</td>\n",
+       "      <td>88.559998</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>80.199997</td>\n",
+       "      <td>147.979996</td>\n",
+       "      <td>178588000.0</td>\n",
+       "      <td>147.979996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-25</td>\n",
+       "      <td>96.730003</td>\n",
+       "      <td>159.179993</td>\n",
+       "      <td>61.130001</td>\n",
+       "      <td>76.790001</td>\n",
+       "      <td>177874000.0</td>\n",
+       "      <td>76.790001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-22</td>\n",
+       "      <td>42.590000</td>\n",
+       "      <td>76.760002</td>\n",
+       "      <td>42.320000</td>\n",
+       "      <td>65.010002</td>\n",
+       "      <td>196784300.0</td>\n",
+       "      <td>65.010002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  open_price  high_price   low_price  close_price       volume  \\\n",
+       "0  2021-01-28  265.000000  483.000000  112.250000   193.600006   58815800.0   \n",
+       "1  2021-01-27  354.829987  380.000000  249.000000   347.510010   93396700.0   \n",
+       "2  2021-01-26   88.559998  150.000000   80.199997   147.979996  178588000.0   \n",
+       "3  2021-01-25   96.730003  159.179993   61.130001    76.790001  177874000.0   \n",
+       "4  2021-01-22   42.590000   76.760002   42.320000    65.010002  196784300.0   \n",
+       "\n",
+       "   adjclose_price  \n",
+       "0      193.600006  \n",
+       "1      347.510010  \n",
+       "2      147.979996  \n",
+       "3       76.790001  \n",
+       "4       65.010002  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,11 +131,11 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
     "\n",
-    "GME_df = pd.read_csv('https://raw.githubusercontent.com/DAVE3625/Dave3625-Host-2025/refs/heads/main/Mandatory%20Assignments/MA2/data/GME_stock.csv')\n",
+    "GME_df = pd.read_csv(\"GME_stock.csv\")\n",
     "\n",
     "#Preview of the dataset \n",
     "GME_df.head()"
@@ -41,14 +143,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a5b6ae5b",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4773 entries, 0 to 4772\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   date            4773 non-null   object \n",
+      " 1   open_price      4773 non-null   float64\n",
+      " 2   high_price      4773 non-null   float64\n",
+      " 3   low_price       4773 non-null   float64\n",
+      " 4   close_price     4773 non-null   float64\n",
+      " 5   volume          4773 non-null   float64\n",
+      " 6   adjclose_price  4773 non-null   float64\n",
+      "dtypes: float64(6), object(1)\n",
+      "memory usage: 261.2+ KB\n",
+      "None\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#We need to preprocess the data first\n",
     "#We can see that the date is a categorical feature, we need to convert the date into a numerical feture\n",
@@ -57,13 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0c944e18",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Conversion of the date from string to an ordinal number, which is a numerical representation of the date starting from jan 1, year 1\n",
@@ -73,14 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f61214c0",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4773 entries, 0 to 4772\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column          Non-Null Count  Dtype         \n",
+      "---  ------          --------------  -----         \n",
+      " 0   date            4773 non-null   datetime64[ns]\n",
+      " 1   open_price      4773 non-null   float64       \n",
+      " 2   high_price      4773 non-null   float64       \n",
+      " 3   low_price       4773 non-null   float64       \n",
+      " 4   close_price     4773 non-null   float64       \n",
+      " 5   volume          4773 non-null   float64       \n",
+      " 6   adjclose_price  4773 non-null   float64       \n",
+      " 7   date_ordinal    4773 non-null   int64         \n",
+      "dtypes: datetime64[ns](1), float64(6), int64(1)\n",
+      "memory usage: 298.4 KB\n",
+      "None\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#Verifying conversion, all good \n",
     "print(GME_df.info())"
@@ -88,14 +223,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ceb89fc1",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date              0\n",
+       "open_price        0\n",
+       "high_price        0\n",
+       "low_price         0\n",
+       "close_price       0\n",
+       "volume            0\n",
+       "adjclose_price    0\n",
+       "date_ordinal      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#Let's also check for any null values, there are none \n",
     "GME_df.isnull().sum()"
@@ -103,14 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "71ba3738",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.False_"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#We can also see that the adjclose_price row has the same data as in the close_price row, if this is the case for all colums,\n",
     "#then we can safely drop this row because this is redundant data.\n",
@@ -120,14 +277,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6f5a9aac",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open_price</th>\n",
+       "      <th>high_price</th>\n",
+       "      <th>low_price</th>\n",
+       "      <th>close_price</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>adjclose_price</th>\n",
+       "      <th>date_ordinal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>474</th>\n",
+       "      <td>2019-03-13</td>\n",
+       "      <td>11.540</td>\n",
+       "      <td>11.640</td>\n",
+       "      <td>11.470</td>\n",
+       "      <td>11.580</td>\n",
+       "      <td>2191600.0</td>\n",
+       "      <td>11.200000</td>\n",
+       "      <td>737131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>2019-03-12</td>\n",
+       "      <td>11.280</td>\n",
+       "      <td>11.550</td>\n",
+       "      <td>11.230</td>\n",
+       "      <td>11.470</td>\n",
+       "      <td>2164900.0</td>\n",
+       "      <td>11.093610</td>\n",
+       "      <td>737130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>2019-03-11</td>\n",
+       "      <td>10.980</td>\n",
+       "      <td>11.280</td>\n",
+       "      <td>10.890</td>\n",
+       "      <td>11.260</td>\n",
+       "      <td>2703600.0</td>\n",
+       "      <td>10.890501</td>\n",
+       "      <td>737129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>2019-03-08</td>\n",
+       "      <td>11.070</td>\n",
+       "      <td>11.220</td>\n",
+       "      <td>10.750</td>\n",
+       "      <td>10.970</td>\n",
+       "      <td>6171600.0</td>\n",
+       "      <td>10.610018</td>\n",
+       "      <td>737126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>2019-03-07</td>\n",
+       "      <td>11.560</td>\n",
+       "      <td>11.660</td>\n",
+       "      <td>11.440</td>\n",
+       "      <td>11.590</td>\n",
+       "      <td>1811400.0</td>\n",
+       "      <td>11.209672</td>\n",
+       "      <td>737125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4768</th>\n",
+       "      <td>2002-02-20</td>\n",
+       "      <td>9.600</td>\n",
+       "      <td>9.875</td>\n",
+       "      <td>9.525</td>\n",
+       "      <td>9.875</td>\n",
+       "      <td>1723200.0</td>\n",
+       "      <td>6.648838</td>\n",
+       "      <td>730901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4769</th>\n",
+       "      <td>2002-02-19</td>\n",
+       "      <td>9.900</td>\n",
+       "      <td>9.900</td>\n",
+       "      <td>9.375</td>\n",
+       "      <td>9.550</td>\n",
+       "      <td>1852600.0</td>\n",
+       "      <td>6.430017</td>\n",
+       "      <td>730900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4770</th>\n",
+       "      <td>2002-02-15</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>10.025</td>\n",
+       "      <td>9.850</td>\n",
+       "      <td>9.950</td>\n",
+       "      <td>2097400.0</td>\n",
+       "      <td>6.699336</td>\n",
+       "      <td>730896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4771</th>\n",
+       "      <td>2002-02-14</td>\n",
+       "      <td>10.175</td>\n",
+       "      <td>10.195</td>\n",
+       "      <td>9.925</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>2755400.0</td>\n",
+       "      <td>6.733003</td>\n",
+       "      <td>730895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4772</th>\n",
+       "      <td>2002-02-13</td>\n",
+       "      <td>9.625</td>\n",
+       "      <td>10.060</td>\n",
+       "      <td>9.525</td>\n",
+       "      <td>10.050</td>\n",
+       "      <td>19054000.0</td>\n",
+       "      <td>6.766666</td>\n",
+       "      <td>730894</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4299 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  open_price  high_price  low_price  close_price      volume  \\\n",
+       "474  2019-03-13      11.540      11.640     11.470       11.580   2191600.0   \n",
+       "475  2019-03-12      11.280      11.550     11.230       11.470   2164900.0   \n",
+       "476  2019-03-11      10.980      11.280     10.890       11.260   2703600.0   \n",
+       "477  2019-03-08      11.070      11.220     10.750       10.970   6171600.0   \n",
+       "478  2019-03-07      11.560      11.660     11.440       11.590   1811400.0   \n",
+       "...         ...         ...         ...        ...          ...         ...   \n",
+       "4768 2002-02-20       9.600       9.875      9.525        9.875   1723200.0   \n",
+       "4769 2002-02-19       9.900       9.900      9.375        9.550   1852600.0   \n",
+       "4770 2002-02-15      10.000      10.025      9.850        9.950   2097400.0   \n",
+       "4771 2002-02-14      10.175      10.195      9.925       10.000   2755400.0   \n",
+       "4772 2002-02-13       9.625      10.060      9.525       10.050  19054000.0   \n",
+       "\n",
+       "      adjclose_price  date_ordinal  \n",
+       "474        11.200000        737131  \n",
+       "475        11.093610        737130  \n",
+       "476        10.890501        737129  \n",
+       "477        10.610018        737126  \n",
+       "478        11.209672        737125  \n",
+       "...              ...           ...  \n",
+       "4768        6.648838        730901  \n",
+       "4769        6.430017        730900  \n",
+       "4770        6.699336        730896  \n",
+       "4771        6.733003        730895  \n",
+       "4772        6.766666        730894  \n",
+       "\n",
+       "[4299 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#We can see that this is not the case, the two rows have different values, we will therefore keep both the rows\n",
     "GME_df[GME_df['close_price'] != GME_df['adjclose_price']]   "
@@ -135,14 +481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e17c6fa8",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LinearRegression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=\u001b[32m0.2\u001b[39m, random_state=\u001b[32m42\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m#Training the model \u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m model = \u001b[43mLinearRegression\u001b[49m()\n\u001b[32m     11\u001b[39m model.fit(X_train, y_train)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#Then we use our model to predict the close price for the 20% test set \u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'LinearRegression' is not defined"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#We now need to select our features and targets, the assignment says that the input should be the date and the output should be the close price,\n",
     "#we will therefore pick those two to keep it simple \n",
@@ -171,6 +525,14 @@
     "\n",
     "#the model is not accurate at all, need to add more features or change the regression model "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a71b30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -180,8 +542,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.11"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
