--- a/DAVE3625-Oblig2.ipynb
+++ b/DAVE3625-Oblig2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "c4b78e62",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "4       65.010002  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_scoreS\n",
     "\n",
     "\n",
     "GME_df = pd.read_csv(\"GME_stock.csv\")\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "a5b6ae5b",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "0c944e18",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "f61214c0",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "ceb89fc1",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "71ba3738",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "np.False_"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "6f5a9aac",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "[4299 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,19 +481,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "e17c6fa8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'LinearRegression' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=\u001b[32m0.2\u001b[39m, random_state=\u001b[32m42\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m#Training the model \u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m model = \u001b[43mLinearRegression\u001b[49m()\n\u001b[32m     11\u001b[39m model.fit(X_train, y_train)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#Then we use our model to predict the close price for the 20% test set \u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'LinearRegression' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 172.26079462020272\n",
+      "R² Score: -0.011701090821397031\n"
      ]
     }
    ],
