--- a/DAVE3625-Oblig2.ipynb
+++ b/DAVE3625-Oblig2.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "### Algorithm Choice\n",
     "\n",
-    "We chose **Linear Regression** for this problem because we want to predict the **stock price**, which is a **continuous number** and not a **category**.  \n",
-    "Linear regression is simple, easy to interpret, and works well for this kind of problem.  \n",
-    "The model finds a relationship between the **date** and the **stock price**, and it is both **quick** and **reliable**."
+    "We chose **Linear Regression** for this problem because we want to predict the **stock price**, which is a **continuous number** and not a **category**. Linear regression is simple, easy to interpret, and works well for this kind of problem. The model finds a relationship between the **date** and the **stock price**, and it is both **quick** and **reliable**."
    ]
   },
   {
@@ -135,10 +133,6 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.feature_selection import RFE\n",
     "\n",
-    "\n",
-    "#We chose linear regression for this problem because we want to predict the stock price which is a number and not a category,\n",
-    "#linear regression is simple, easy to interpret and works well with this kind of machine learning problems,\n",
-    "#the regression finds a relationship between the date (or other features) and the stock close price, it is quick and reliable. \n",
     "\n",
     "GME_df = pd.read_csv(\"GME_stock.csv\")\n",
     "\n",
